--- a/TesWin1/TesWin1.csproj
+++ b/TesWin1/TesWin1.csproj
@@ -52,6 +52,12 @@
     <Compile Include="AddOrder.Designer.cs">
       <DependentUpon>AddOrder.cs</DependentUpon>
     </Compile>
+    <Compile Include="AddTypeProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddTypeProduct.Designer.cs">
+      <DependentUpon>AddTypeProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddUser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,12 @@
     <Compile Include="EditProduct.Designer.cs">
       <DependentUpon>EditProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditUser.Designer.cs">
+      <DependentUpon>EditUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +91,7 @@
     <Compile Include="History.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="ProductType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Promotion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -86,6 +99,12 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ShopCafeDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="ShowHistory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShowHistory.Designer.cs">
+      <DependentUpon>ShowHistory.cs</DependentUpon>
     </Compile>
     <Compile Include="ShowOrder.cs">
       <SubType>Form</SubType>
@@ -109,6 +128,9 @@
     <EmbeddedResource Include="AddOrder.resx">
       <DependentUpon>AddOrder.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="AddTypeProduct.resx">
+      <DependentUpon>AddTypeProduct.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddUser.resx">
       <DependentUpon>AddUser.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,6 +139,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EditProduct.resx">
       <DependentUpon>EditProduct.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditUser.resx">
+      <DependentUpon>EditUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -131,6 +156,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ShowHistory.resx">
+      <DependentUpon>ShowHistory.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ShowOrder.resx">
       <DependentUpon>ShowOrder.cs</DependentUpon>
     </EmbeddedResource>
